@@ -18,18 +18,7 @@ import java.awt.Color;
 import java.awt.Point;
 import java.awt.Rectangle;
 import java.awt.geom.Area;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.ListIterator;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import net.rptools.lib.MD5Key;
 import net.rptools.maptool.client.AppPreferences;
 import net.rptools.maptool.client.AppUtil;
@@ -227,7 +216,7 @@ public class Zone extends BaseModel {
   private int height;
   private int width;
 
-  private transient HashMap<String, Integer> tokenNumberCache;
+  private transient Map<String, Integer> tokenNumberCache;
 
   /**
    * Note: When adding new fields to this class, make sure to update all constructors, {@link
@@ -370,23 +359,22 @@ public class Zone extends BaseModel {
     // library that use a Transformer and that seemed like a lot more work. :-/
     if (zone.drawables != null && !zone.drawables.isEmpty()) {
       drawables = new LinkedList<DrawnElement>();
-      drawables.addAll(Collections.nCopies(zone.drawables.size(), (DrawnElement) null));
+      drawables.addAll(Collections.nCopies(zone.drawables.size(), null));
       Collections.copy(drawables, zone.drawables);
     }
     if (zone.objectDrawables != null && !zone.objectDrawables.isEmpty()) {
       objectDrawables = new LinkedList<DrawnElement>();
-      objectDrawables.addAll(Collections.nCopies(zone.objectDrawables.size(), (DrawnElement) null));
+      objectDrawables.addAll(Collections.nCopies(zone.objectDrawables.size(), null));
       Collections.copy(objectDrawables, zone.objectDrawables);
     }
     if (zone.backgroundDrawables != null && !zone.backgroundDrawables.isEmpty()) {
       backgroundDrawables = new LinkedList<DrawnElement>();
-      backgroundDrawables.addAll(
-          Collections.nCopies(zone.backgroundDrawables.size(), (DrawnElement) null));
+      backgroundDrawables.addAll(Collections.nCopies(zone.backgroundDrawables.size(), null));
       Collections.copy(backgroundDrawables, zone.backgroundDrawables);
     }
     if (zone.gmDrawables != null && !zone.gmDrawables.isEmpty()) {
       gmDrawables = new LinkedList<DrawnElement>();
-      gmDrawables.addAll(Collections.nCopies(zone.gmDrawables.size(), (DrawnElement) null));
+      gmDrawables.addAll(Collections.nCopies(zone.gmDrawables.size(), null));
       Collections.copy(gmDrawables, zone.gmDrawables);
     }
     if (zone.labels != null && !zone.labels.isEmpty()) {
@@ -1508,7 +1496,7 @@ public class Zone extends BaseModel {
   }
 
   public List<Token> getAllTokens() {
-    return Collections.unmodifiableList(new ArrayList<Token>(tokenOrderedList));
+    return List.copyOf(tokenOrderedList);
   }
 
   public Set<MD5Key> getAllAssetIds() {
@@ -1734,11 +1722,7 @@ public class Zone extends BaseModel {
 
     int lastUsed;
 
-    if (_lastUsed == null) {
-      lastUsed = 0;
-    } else {
-      lastUsed = _lastUsed;
-    }
+    lastUsed = Objects.requireNonNullElse(_lastUsed, 0);
     boolean repeat;
     do {
       lastUsed++;
